# notes

./: README.md
00opencascade/: 001.build with CMake.md  002.occ overview.md  003.MakeBottle.md  004.occ-Basic-class-analysis.md  004.occ.md  005.occ_vtk.md  006.ModelingData.md  007.BRepFormat.md  008.ModelingAlgorithms.md  009.Mesh.md  1.build with CMake.md
01emacs/: 001.Basic Operation.md  002.Emacs_auctex_texlive.md  003.chenbin.md  004.chenbin Tutorial.md  005.emacs improve.md  008.C++.md
01emacs/02binchenLesson/: 01.vscode1.md
02opengl/: 001.Qt5 OpenGL 0 Create OpenGL Window.md  002.Opengl-red book 1.md  003.Redbook Shader Fundamentals 1.md  004.Shader Fundamentals 2.md  005.Shader Fundamentals 3.md  006.learnopengl-start.md  007.learnopengl-triangle.md  008.learnopengl-shaders.md  009.learnopengl-textures.md  010.learnopengl-transformation.md  011.learnopengl-coordinatesystems.md  012.learnopengl-Camera.md
02opengl/Source/001/: 01openglwindow.pro  main.cpp  openglwindow.cpp  openglwindow.h  window.cpp  window.h
02opengl/Source/002triangles/: 01triangles.pro  main.cpp
02opengl/Source/006CreateWindow/: glad.c
02opengl/Source/006CreateWindow/glad/: glad.h
02opengl/Source/007triangle/: 002_Triangle.pro  004hello_triangle_indexed.cpp  005hello_triangle_exercise1.cpp  006hello_triangle_exercise2.cpp  007hello_triangle_exercise3.cpp
02opengl/Source/008shaders/: 008shaders_uniform.cpp  009shaders_interpolation.cpp  012shaders-exercise2  013shaders-exercise3  3.3.shader.fs
02opengl/Source/009textures/: 003_Textures.pro  textures.cpp  textures_combined.cpp
02opengl/Source/011coordinatesystems/: cube_vertices.cpp
05vtk/: 000.LearnPath.md  001.Win7_QT_VTK.md  002.概览.md  003.Projection Matrix.md  004.BasicConcepts.md  005.VTKBasicDataStructure.md
05vtk/05source/004.BasicConcepts/: 008_Viewport.cpp  009_vtkPipelineDemo.cpp  009_vtkPipelineDemo.pro  010__vtkPipelineExecute.cpp  010__vtkPipelineExecute.pro  011_ReferenceCounting.cpp
05vtk/05source/005.VTKBasicDataStructure/: 012_TrianglePoints.cpp  012_TrianglePoints.pro  013_TriangleVertices.cpp  014_TriangleGeometryLines.cpp
05vtk/05source/CMake/001_Tutroial_Step1/: 001_Tutorial_Step1.cxx  CMakeLists.txt
05vtk/05source/CMake/002_Tutorial_Step2/: CMakeLists.txt  Tutorial_Step2.cxx
05vtk/05source/CMake/003_TutorialStep3/: CMakeLists.txt  Tutorial_Step3.cxx
05vtk/05source/CMake/004_Tutorial_Step4/: CMakeLists.txt  Tutorial_Step4.cxx
05vtk/05source/CMake/005_Tutorial_Step5/: CMakeLists.txt  Tutorial_Step5.cxx
05vtk/05source/CMake/006_Tutorial_Step6/: CMakeLists.txt  Tutorial_Step6.cxx
05vtk/05source/CMake/007_CylinderExample/: CMakeLists.txt
05vtk/05source/QT/001_TutorialStep1/: main.cpp
05vtk/05source/QT/002_TutorialStep2/: main.cpp
05vtk/05source/QT/003_TutorialStep3/: 003_TutorialStep3.pro  TutorialStep3.cpp
05vtk/05source/QT/004_Tutorial_Step4/: 004_Tutorial_Step4.pro  main.cpp
05vtk/05source/QT/005_Tutorial_Step5/: 005_Tutorial_Step5.pro  Tutorial_Step5.cpp
05vtk/05source/QT/006_Tutorial_Step6/: 006_Tutorial_Step6.pro  Tutorial_Step6.cpp
05vtk/05source/QT/007_CylinderExample/: 007_CylinderExample.pro  CylinderExample.cpp
05vtk/05source/QVTKWidget/001_Tutorial_Step1/: 001_Tutorial_Step1.pro  main.cpp  tutorialstep1.cpp  tutorialstep1.h
05vtk/05source/QVTKWidget/002_TutorialStep2/: 002_TutorialStep2.pro  main.cpp  tutorialstep2.cpp  tutorialstep2.h  tutorialstep2.ui
05vtk/05source/QVTKWidget/003_Tutorial_Step3/: 003_Tutorial_Step3.pro  main.cpp  tutorial_step3.cpp  (+2 more)
05vtk/vtkUsersGuide/: 001.Introduction and Installation.md
06make_cmake_ccmake/: 001.makefile.md  002.cmake基础.md
07git/: 2.git基本操作.md
08git/: 1.git初步.md
11Algorithm/: 001.kmp.md
11Algorithm/01.算法竞赛进阶指南/: 0x01位运算.md
12Linux/: 001.Commonly used.md
13FENGSim/01pcl/: 01.pcl build on win7 qt mingw.md  02.Introduction.md  03.SurfaceNormalFilter.md  04.PFH_FPFH.md  05.BasicStructures.md  06.transform.md  07.PoinTtype.md  08.NewPCLClass.md  09.3DFeaturesWork.md  10.EstimatingSurfaceNormalsUsePointCloud.md  11.EstimatingSurfaceNormalsUseImages.md
14vim/: 001.vimInstall.md  002.vimBasic.md  003.VimCommonCommands.md  004.InitialCustomization.md
17Math/: 001.同济大学高等数学1.md
(+18 files in other folders)
